--- a/qtile/qtile.desktop
+++ b/qtile/qtile.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Qtile
 Comment=Qtile Session
-Exec=/home/dominik/.local/bin/qtile start
+Exec=qtile start
 Type=Application
 Keywords=wm;tiling
